@@ -1,0 +1,21 @@
+//-----------------------------------------------------------------------------
+//
+// ImageLib Sources
+// Copyright (C) 2000-2008 by Denton Woods
+// Last modified: 09/26/2008
+//
+// Filename: src-IL/include/il_hdr.h
+//
+// Description: Reads a Microsoft HD Photo (.wdp)
+//
+//-----------------------------------------------------------------------------
+
+
+#ifndef WDP_H
+#define WDP_H
+
+#include "il_internal.h"
+
+ILboolean iLoadWdpInternal(ILconst_string FileName);
+
+#endif//WDP_H
